/******************************************************************************
*
* @Author Bart Volkaerts
* @version 1.0
* @date 02-2013
*
******************************************************************************/

message Player {
    required float x = 1;
    required float y = 2;
    required float rotate_x = 3;
    required float rotate_y = 4;
}

message Ball {
    required float x = 1;
    required float y = 2;
}

message Goal {
    required float pole1_x = 1;
    required float pole1_y = 2;
    required float pole2_x = 3;
    required float pole2_y = 4;
}

message Game {
    required Player player_a = 1;
    required Player player_b = 2;
    required Ball ball = 3;
    required Goal goal = 4;
}

